:sparkles: Black Magic

--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -94,9 +94,9 @@
    "outputs": [],
    "source": [
     "# constants\n",
-    "MOVIE_PATH = './data/MovieSummaries/movie.metadata.tsv'\n",
-    "CHARACTER_PATH = './data/MovieSummaries/character.metadata.tsv'\n",
-    "RATING_PATH = './data/IMDb/title.ratings.tsv'"
+    "MOVIE_PATH = \"./data/MovieSummaries/movie.metadata.tsv\"\n",
+    "CHARACTER_PATH = \"./data/MovieSummaries/character.metadata.tsv\"\n",
+    "RATING_PATH = \"./data/IMDb/title.ratings.tsv\""
    ]
   },
   {
@@ -108,20 +108,41 @@
    "source": [
     "# create dataframes\n",
     "\n",
-    "#define collumn names\n",
-    "colnames_movies = ['wikipedia_movie_ID', 'freebase_movie_ID', 'movie_name', \n",
-    "                   'movie_release_date', 'movie_box_office_revenue', 'movie_runtime',\n",
-    "                   'movie_languages', 'movie_countries', 'movie_genres']\n",
+    "# define collumn names\n",
+    "colnames_movies = [\n",
+    "    \"wikipedia_movie_ID\",\n",
+    "    \"freebase_movie_ID\",\n",
+    "    \"movie_name\",\n",
+    "    \"movie_release_date\",\n",
+    "    \"movie_box_office_revenue\",\n",
+    "    \"movie_runtime\",\n",
+    "    \"movie_languages\",\n",
+    "    \"movie_countries\",\n",
+    "    \"movie_genres\",\n",
+    "]\n",
     "\n",
-    "colnames_character = ['wikipedia_movie_ID', 'freebase_movie_ID', 'last_update', 'character_name', \n",
-    "                      'actor_DOB','actor_gender', 'actor_height', 'actor_ethnicity', 'actor_name', \n",
-    "                      'actor_age_at_movie_release', 'freebase_character/actor_map_ID', \n",
-    "                      'freebase_character_ID', 'freebase_actor_ID']\n",
+    "colnames_character = [\n",
+    "    \"wikipedia_movie_ID\",\n",
+    "    \"freebase_movie_ID\",\n",
+    "    \"last_update\",\n",
+    "    \"character_name\",\n",
+    "    \"actor_DOB\",\n",
+    "    \"actor_gender\",\n",
+    "    \"actor_height\",\n",
+    "    \"actor_ethnicity\",\n",
+    "    \"actor_name\",\n",
+    "    \"actor_age_at_movie_release\",\n",
+    "    \"freebase_character/actor_map_ID\",\n",
+    "    \"freebase_character_ID\",\n",
+    "    \"freebase_actor_ID\",\n",
+    "]\n",
     "\n",
     "\n",
     "# load data\n",
-    "movies = pd.read_csv(MOVIE_PATH, sep='\\t', names=colnames_movies, header=None)\n",
-    "characters = pd.read_csv(CHARACTER_PATH, sep='\\t', names=colnames_character, header=None)"
+    "movies = pd.read_csv(MOVIE_PATH, sep=\"\\t\", names=colnames_movies, header=None)\n",
+    "characters = pd.read_csv(\n",
+    "    CHARACTER_PATH, sep=\"\\t\", names=colnames_character, header=None\n",
+    ")"
    ]
   },
   {
@@ -325,14 +346,16 @@
    "source": [
     "# filtering out movies without revenue\n",
     "num_movies_before_filter = movies.shape[0]\n",
-    "movies = movies[~movies['movie_box_office_revenue'].isna()]\n",
+    "movies = movies[~movies[\"movie_box_office_revenue\"].isna()]\n",
     "num_movies_after_filter = movies.shape[0]\n",
     "\n",
     "# printing the results\n",
-    "print(f'''\n",
+    "print(\n",
+    "    f\"\"\"\n",
     "Total number of movies before filtering: {num_movies_before_filter}\n",
     "Number of movies after filtering:         {num_movies_after_filter}     \n",
-    "''')"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -446,14 +469,15 @@
    ],
    "source": [
     "# add collumn for number of actors\n",
-    "num_actors = characters.groupby('freebase_movie_ID')['freebase_actor_ID']\\\n",
-    "    .apply(lambda x: x.nunique())\n",
+    "num_actors = characters.groupby(\"freebase_movie_ID\")[\"freebase_actor_ID\"].apply(\n",
+    "    lambda x: x.nunique()\n",
+    ")\n",
     "\n",
     "# rename the series\n",
-    "num_actors.name = 'num_actors'\n",
+    "num_actors.name = \"num_actors\"\n",
     "\n",
     "# merge with the movies data frame\n",
-    "movies = movies.merge(num_actors, left_on='freebase_movie_ID', right_index=True)\n",
+    "movies = movies.merge(num_actors, left_on=\"freebase_movie_ID\", right_index=True)\n",
     "\n",
     "# print result\n",
     "movies.head(1)"
@@ -479,10 +503,10 @@
    "source": [
     "# plot the distribution of actors\n",
     "bins = np.arange(100) - 0.5  # -0.5 for center-aligned bins\n",
-    "plt.hist(movies['num_actors'], histtype=\"step\", bins=bins, log=True)\n",
-    "plt.xlabel('Number of actors')\n",
-    "plt.ylabel('Number of movies')\n",
-    "plt.title('Distribution of actors')\n",
+    "plt.hist(movies[\"num_actors\"], histtype=\"step\", bins=bins, log=True)\n",
+    "plt.xlabel(\"Number of actors\")\n",
+    "plt.ylabel(\"Number of movies\")\n",
+    "plt.title(\"Distribution of actors\")\n",
     "plt.show()"
    ]
   },
@@ -505,11 +529,11 @@
    ],
    "source": [
     "# plot relationship between 'num_actors' and 'movie_box_office_revenue'\n",
-    "movies.plot.scatter(x='num_actors', y='movie_box_office_revenue', s=1)\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel('Number of actors')\n",
-    "plt.ylabel('Movie box office revenue')\n",
-    "plt.title('Relationship between the number actors and the movie box office revenue')\n",
+    "movies.plot.scatter(x=\"num_actors\", y=\"movie_box_office_revenue\", s=1)\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xlabel(\"Number of actors\")\n",
+    "plt.ylabel(\"Movie box office revenue\")\n",
+    "plt.title(\"Relationship between the number actors and the movie box office revenue\")\n",
     "plt.show()"
    ]
   },
@@ -532,7 +556,7 @@
    ],
    "source": [
     "# compute spearman correlation between 'num_actors' and 'movie_box_office_revenue'\n",
-    "stats.spearmanr(movies['num_actors'], movies['movie_box_office_revenue'])"
+    "stats.spearmanr(movies[\"num_actors\"], movies[\"movie_box_office_revenue\"])"
    ]
   },
   {
@@ -591,14 +615,16 @@
    "source": [
     "# filtering out movies with less than 10 actors\n",
     "num_movies_before_filter = movies.shape[0]\n",
-    "movies = movies[movies['num_actors'] > 9]\n",
+    "movies = movies[movies[\"num_actors\"] > 9]\n",
     "num_movies_after_filter = movies.shape[0]\n",
     "\n",
     "# printing the results\n",
-    "print(f'''\n",
+    "print(\n",
+    "    f\"\"\"\n",
     "Total number of movies before filtering: {num_movies_before_filter}\n",
     "Number of movies after filtering:        {num_movies_after_filter}     \n",
-    "''')"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -621,10 +647,10 @@
    "source": [
     "# plot the distribution of actors after threshold\n",
     "bins = np.arange(10, 100) - 0.5  # -0.5 for center-aligned bins\n",
-    "plt.hist(movies['num_actors'], histtype=\"step\", bins=bins, log=True)\n",
-    "plt.xlabel('Number of actors')\n",
-    "plt.ylabel('Number of movies')\n",
-    "plt.title('Distribution of actors')\n",
+    "plt.hist(movies[\"num_actors\"], histtype=\"step\", bins=bins, log=True)\n",
+    "plt.xlabel(\"Number of actors\")\n",
+    "plt.ylabel(\"Number of movies\")\n",
+    "plt.title(\"Distribution of actors\")\n",
     "plt.show()"
    ]
   },
@@ -647,7 +673,7 @@
    ],
    "source": [
     "# compute spearman correlation between 'num_actors' and 'movie_box_office_revenue'\n",
-    "stats.spearmanr(movies['num_actors'], movies['movie_box_office_revenue'])"
+    "stats.spearmanr(movies[\"num_actors\"], movies[\"movie_box_office_revenue\"])"
    ]
   },
   {
@@ -745,15 +771,15 @@
    ],
    "source": [
     "# adding column for year release\n",
-    "movies['year_released'] = pd.to_datetime(movies['movie_release_date'], \n",
-    "                                         infer_datetime_format=True, \n",
-    "                                         errors='coerce').dt.year\n",
+    "movies[\"year_released\"] = pd.to_datetime(\n",
+    "    movies[\"movie_release_date\"], infer_datetime_format=True, errors=\"coerce\"\n",
+    ").dt.year\n",
     "\n",
     "# removing null values\n",
-    "movies = movies[~movies['year_released'].isna()]\n",
+    "movies = movies[~movies[\"year_released\"].isna()]\n",
     "\n",
     "# converting to 'int64'\n",
-    "movies['year_released'].astype('int64')\n",
+    "movies[\"year_released\"].astype(\"int64\")\n",
     "\n",
     "# print result\n",
     "movies.head(1)"
@@ -779,10 +805,10 @@
    "source": [
     "# plot the distribution of realese years\n",
     "bins = np.arange(1915, 2013) - 0.5  # -0.5 for center-aligned bins\n",
-    "plt.hist(movies['year_released'], histtype='step', bins=bins, log=True)\n",
-    "plt.xlabel('Release year')\n",
-    "plt.ylabel('Number of movies')\n",
-    "plt.title('Distribution of of movies released')\n",
+    "plt.hist(movies[\"year_released\"], histtype=\"step\", bins=bins, log=True)\n",
+    "plt.xlabel(\"Release year\")\n",
+    "plt.ylabel(\"Number of movies\")\n",
+    "plt.title(\"Distribution of of movies released\")\n",
     "plt.show()"
    ]
   },
@@ -832,14 +858,15 @@
    "outputs": [],
    "source": [
     "# add collumn for number of ethnicities\n",
-    "num_ethnicities = characters.groupby('freebase_movie_ID')['actor_ethnicity']\\\n",
-    "    .apply(lambda x: x.nunique())\n",
+    "num_ethnicities = characters.groupby(\"freebase_movie_ID\")[\"actor_ethnicity\"].apply(\n",
+    "    lambda x: x.nunique()\n",
+    ")\n",
     "\n",
     "# rename the series\n",
-    "num_ethnicities.name = 'num_ethnicities'\n",
+    "num_ethnicities.name = \"num_ethnicities\"\n",
     "\n",
     "# merge with the movies data frame\n",
-    "movies = movies.merge(num_ethnicities, left_on='freebase_movie_ID', right_index=True)"
+    "movies = movies.merge(num_ethnicities, left_on=\"freebase_movie_ID\", right_index=True)"
    ]
   },
   {
@@ -861,11 +888,13 @@
    ],
    "source": [
     "# plot relationship between 'num_ethnicities' and 'movie_box_office_revenue'\n",
-    "movies.plot.scatter(x='num_ethnicities', y='movie_box_office_revenue', s=1)\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel('Number of ethnicities')\n",
-    "plt.ylabel('Movie box office revenue')\n",
-    "plt.title('Relationship between the number of ethnicities and the movie box office revenue')\n",
+    "movies.plot.scatter(x=\"num_ethnicities\", y=\"movie_box_office_revenue\", s=1)\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xlabel(\"Number of ethnicities\")\n",
+    "plt.ylabel(\"Movie box office revenue\")\n",
+    "plt.title(\n",
+    "    \"Relationship between the number of ethnicities and the movie box office revenue\"\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -888,7 +917,7 @@
    ],
    "source": [
     "# compute spearman correlation between 'num_ethnicities' and 'movie_box_office_revenue'\n",
-    "stats.spearmanr(movies['num_ethnicities'], movies['movie_box_office_revenue'])"
+    "stats.spearmanr(movies[\"num_ethnicities\"], movies[\"movie_box_office_revenue\"])"
    ]
   },
   {
@@ -910,7 +939,7 @@
    ],
    "source": [
     "# compute spearman correlation between 'num_actors' and 'movie_box_office_revenue'\n",
-    "stats.spearmanr(movies['num_actors'], movies['movie_box_office_revenue'])"
+    "stats.spearmanr(movies[\"num_actors\"], movies[\"movie_box_office_revenue\"])"
    ]
   },
   {
@@ -942,7 +971,7 @@
    "outputs": [],
    "source": [
     "# adding a collumn for num_etnicities / num_ectors\n",
-    "movies['ethnicity_score'] = movies['num_ethnicities'] / movies['num_actors']"
+    "movies[\"ethnicity_score\"] = movies[\"num_ethnicities\"] / movies[\"num_actors\"]"
    ]
   },
   {
@@ -964,11 +993,11 @@
    ],
    "source": [
     "# plot relationship between 'ethnicity_score' and 'movie_box_office_revenue'\n",
-    "movies.plot.scatter(x='ethnicity_score', y='movie_box_office_revenue', s=1)\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel('Ethnicity score')\n",
-    "plt.ylabel('Movie box office revenue')\n",
-    "plt.title('Relationship between the ethnicity score and the movie box office revenue')\n",
+    "movies.plot.scatter(x=\"ethnicity_score\", y=\"movie_box_office_revenue\", s=1)\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xlabel(\"Ethnicity score\")\n",
+    "plt.ylabel(\"Movie box office revenue\")\n",
+    "plt.title(\"Relationship between the ethnicity score and the movie box office revenue\")\n",
     "plt.show()"
    ]
   },
@@ -991,7 +1020,7 @@
    ],
    "source": [
     "# compute spearman correlation between 'ethnicity_score' and 'movie_box_office_revenue'\n",
-    "stats.spearmanr(movies['ethnicity_score'], movies['movie_box_office_revenue'])"
+    "stats.spearmanr(movies[\"ethnicity_score\"], movies[\"movie_box_office_revenue\"])"
    ]
   },
   {
@@ -1020,8 +1049,8 @@
    "outputs": [],
    "source": [
     "# check difference between the revenue of movies with an without ethnicity score above 50\n",
-    "over_50_revenue = movies[movies['ethnicity_score'] > 0.5]['movie_box_office_revenue']\n",
-    "under_50_revenue = movies[movies['ethnicity_score'] <= 0.5]['movie_box_office_revenue']"
+    "over_50_revenue = movies[movies[\"ethnicity_score\"] > 0.5][\"movie_box_office_revenue\"]\n",
+    "under_50_revenue = movies[movies[\"ethnicity_score\"] <= 0.5][\"movie_box_office_revenue\"]"
    ]
   },
   {
@@ -1075,10 +1104,10 @@
     "    # sample over_50 and under_50\n",
     "    sample_over_50 = np.random.choice(over_50_revenue, size=over_50_revenue.shape[0])\n",
     "    sample_under_50 = np.random.choice(under_50_revenue, size=under_50_revenue.shape[0])\n",
-    "    \n",
+    "\n",
     "    # independent t-test\n",
     "    p_val[i] = stats.ttest_ind(sample_over_50, sample_under_50)[1]\n",
-    "    \n",
+    "\n",
     "# calculating the percentage of rejects\n",
     "power = len(p_val[p_val < 0.05]) / len(p_val)\n",
     "\n",
@@ -1205,13 +1234,15 @@
    "source": [
     "# checkint the amount of characters without 'actor_gender'\n",
     "num_characters = characters.shape[0]\n",
-    "num_nan_gender = characters[characters['actor_gender'].isna()].shape[0]\n",
+    "num_nan_gender = characters[characters[\"actor_gender\"].isna()].shape[0]\n",
     "\n",
     "# printing the results\n",
-    "print(f'''\n",
+    "print(\n",
+    "    f\"\"\"\n",
     "Total number of characters:                {num_characters}\n",
     "Number of characters without actor gender:  {num_nan_gender}     \n",
-    "''')"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -1308,14 +1339,14 @@
     "# add collumn for fraction of females\n",
     "\n",
     "# create frame with female actors\n",
-    "female_characters = characters[characters['actor_gender'] == 'F']\n",
+    "female_characters = characters[characters[\"actor_gender\"] == \"F\"]\n",
     "\n",
     "# add column for number of female actors\n",
-    "num_female = female_characters.groupby('freebase_movie_ID')['actor_gender'].count()\n",
+    "num_female = female_characters.groupby(\"freebase_movie_ID\")[\"actor_gender\"].count()\n",
     "\n",
     "# rename the series\n",
-    "num_female.name = 'num_female'\n",
-    "movies = movies.merge(num_female, left_on='freebase_movie_ID', right_index=True)\n",
+    "num_female.name = \"num_female\"\n",
+    "movies = movies.merge(num_female, left_on=\"freebase_movie_ID\", right_index=True)\n",
     "\n",
     "# print result\n",
     "movies.head(1)"
@@ -1340,11 +1371,11 @@
    ],
    "source": [
     "# plot relationship between 'num_female' and 'movie_box_office_revenue'\n",
-    "movies.plot.scatter(x='num_female', y='movie_box_office_revenue', s=1)\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel('Number of females')\n",
-    "plt.ylabel('Movie box office revenue')\n",
-    "plt.title('Relationship between number of females and movie box office revenue')\n",
+    "movies.plot.scatter(x=\"num_female\", y=\"movie_box_office_revenue\", s=1)\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xlabel(\"Number of females\")\n",
+    "plt.ylabel(\"Movie box office revenue\")\n",
+    "plt.title(\"Relationship between number of females and movie box office revenue\")\n",
     "plt.show()"
    ]
   },
@@ -1367,7 +1398,7 @@
    ],
    "source": [
     "# compute spearman correlation between 'num_female' and 'movie_box_office_revenue'\n",
-    "stats.spearmanr(movies['num_female'], movies['movie_box_office_revenue'])"
+    "stats.spearmanr(movies[\"num_female\"], movies[\"movie_box_office_revenue\"])"
    ]
   },
   {
@@ -1473,7 +1504,7 @@
    ],
    "source": [
     "# add column for fraction of females\n",
-    "movies['frac_female'] = movies['num_female'] / movies['num_actors']\n",
+    "movies[\"frac_female\"] = movies[\"num_female\"] / movies[\"num_actors\"]\n",
     "\n",
     "# print result\n",
     "movies.head(1)"
@@ -1498,11 +1529,11 @@
    ],
    "source": [
     "# plot relationship between 'frac_female' and 'movie_box_office_revenue'\n",
-    "movies.plot.scatter(x='frac_female', y='movie_box_office_revenue', s=1)\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel('Fraction of females')\n",
-    "plt.ylabel('Movie box office revenue')\n",
-    "plt.title('Relationship between fraction of females and movie box office revenue')\n",
+    "movies.plot.scatter(x=\"frac_female\", y=\"movie_box_office_revenue\", s=1)\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xlabel(\"Fraction of females\")\n",
+    "plt.ylabel(\"Movie box office revenue\")\n",
+    "plt.title(\"Relationship between fraction of females and movie box office revenue\")\n",
     "plt.show()"
    ]
   },
@@ -1525,7 +1556,7 @@
    ],
    "source": [
     "# compute spearman correlation between 'frac_female' and 'movie_box_office_revenue'\n",
-    "stats.spearmanr(movies['num_female'], movies['movie_box_office_revenue'])"
+    "stats.spearmanr(movies[\"num_female\"], movies[\"movie_box_office_revenue\"])"
    ]
   },
   {
@@ -1536,8 +1567,10 @@
    "outputs": [],
    "source": [
     "# check difference between the revenue of movies with majority of men and majority of women\n",
-    "majority_male_revenue = movies[movies['frac_female'] <= 0.5]['movie_box_office_revenue']\n",
-    "majority_female_revenue = movies[movies['frac_female'] > 0.5]['movie_box_office_revenue']"
+    "majority_male_revenue = movies[movies[\"frac_female\"] <= 0.5][\"movie_box_office_revenue\"]\n",
+    "majority_female_revenue = movies[movies[\"frac_female\"] > 0.5][\n",
+    "    \"movie_box_office_revenue\"\n",
+    "]"
    ]
   },
   {
@@ -1599,12 +1632,16 @@
     "for i in range(10000):\n",
     "\n",
     "    # sample over_50 and under_50\n",
-    "    sample_majority_male = np.random.choice(majority_male_revenue, size=majority_male_revenue.shape[0])\n",
-    "    sample_majority_female = np.random.choice(majority_female_revenue, size=majority_female_revenue.shape[0])\n",
-    "    \n",
+    "    sample_majority_male = np.random.choice(\n",
+    "        majority_male_revenue, size=majority_male_revenue.shape[0]\n",
+    "    )\n",
+    "    sample_majority_female = np.random.choice(\n",
+    "        majority_female_revenue, size=majority_female_revenue.shape[0]\n",
+    "    )\n",
+    "\n",
     "    # independent t-test\n",
     "    p_val[i] = stats.ttest_ind(sample_majority_male, sample_majority_female)[1]\n",
-    "    \n",
+    "\n",
     "# calculating the percentage of rejects\n",
     "power = len(p_val[p_val < 0.05]) / len(p_val)\n",
     "\n",
