--- a/cast_exploring_revenue.ipynb
+++ b/cast_exploring_revenue.ipynb
@@ -15,6 +15,7 @@
    "id": "06140871-7aa4-4f2e-b1e7-d52bb95c8214",
    "metadata": {},
    "source": [
+    "---\n",
     "**Summary**"
    ]
   },
@@ -33,14 +34,6 @@
    "metadata": {},
    "source": [
     "**Contents of Notebook**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9548e9a9-5d5f-46f6-926f-8958841f05e3",
-   "metadata": {},
-   "source": [
-    "-"
    ]
   },
   {
@@ -84,7 +77,7 @@
     "tags": []
    },
    "source": [
-    "# Data Processing"
+    "## Data Processing"
    ]
   },
   {
@@ -964,12 +957,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b031c90-4d46-4328-9e94-6063e783f82b",
+   "cell_type": "markdown",
+   "id": "a579afa0-3956-47b9-8f61-8139f7b7f451",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![snape](img/snape.jpeg)"
+   ]
   }
  ],
  "metadata": {
