--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "48a56350-8e01-425c-95fd-4f84b29ea6b0",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "6fc48924-f1e9-448f-9fcb-db7bc2473830",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "508ffcd0-bef8-41c7-b712-ff85deff145e",
    "metadata": {},
    "outputs": [],
@@ -150,8 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "88133cdf-4580-4cea-b9be-e90dff0b7f06",
+   "execution_count": 45,
+   "id": "d0874210-679d-4d53-9350-a9562e2d4513",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "0  {\"/m/01jfsb\": \"Thriller\", \"/m/06n90\": \"Science...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,6 +228,112 @@
    "source": [
     "# print the 'movies' data frame\n",
     "movies.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "8b279a5d-6fe5-458e-8cea-2af9e2f34ca3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wikipedia_movie_ID</th>\n",
+       "      <th>movie_box_office_revenue</th>\n",
+       "      <th>movie_runtime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8.174100e+04</td>\n",
+       "      <td>8.401000e+03</td>\n",
+       "      <td>6.129100e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.740784e+07</td>\n",
+       "      <td>4.799363e+07</td>\n",
+       "      <td>1.118192e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.098791e+07</td>\n",
+       "      <td>1.121753e+08</td>\n",
+       "      <td>4.360070e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.300000e+02</td>\n",
+       "      <td>1.000000e+04</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.323695e+06</td>\n",
+       "      <td>2.083193e+06</td>\n",
+       "      <td>8.100000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.777899e+07</td>\n",
+       "      <td>1.063969e+07</td>\n",
+       "      <td>9.300000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.715573e+07</td>\n",
+       "      <td>4.071696e+07</td>\n",
+       "      <td>1.060000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>3.750192e+07</td>\n",
+       "      <td>2.782275e+09</td>\n",
+       "      <td>1.079281e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       wikipedia_movie_ID  movie_box_office_revenue  movie_runtime\n",
+       "count        8.174100e+04              8.401000e+03   6.129100e+04\n",
+       "mean         1.740784e+07              4.799363e+07   1.118192e+02\n",
+       "std          1.098791e+07              1.121753e+08   4.360070e+03\n",
+       "min          3.300000e+02              1.000000e+04   0.000000e+00\n",
+       "25%          7.323695e+06              2.083193e+06   8.100000e+01\n",
+       "50%          1.777899e+07              1.063969e+07   9.300000e+01\n",
+       "75%          2.715573e+07              4.071696e+07   1.060000e+02\n",
+       "max          3.750192e+07              2.782275e+09   1.079281e+06"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.describe()"
    ]
   },
   {
