:coffin: Putting this one to bed

--- a/project_milestone_2.ipynb
+++ b/project_milestone_2.ipynb
@@ -32,6 +32,12 @@
     "- [Data Processing](#Data-Processing)\n",
     "  - [Loading data](#Loading-data)\n",
     "  - [Removing null values](#Removing-null-values)\n",
+    "- [Release Date](#Release-Date)\n",
+    "  - [Data Processing](#Data-Processing)\n",
+    "  - [Plots - Year](#Plots---Year)\n",
+    "  - [Plots - Month](#Plots---Month)\n",
+    "  - [Adjusting for Inflation](#Adjusting-for-Inflation)\n",
+    "  - [Statistics](#Statistics)\n",
     "- [Diversity](#Diversity)\n",
     "  - [Distributions](#Distributions)\n",
     "  - [Ethnicities](#Ethnicities)\n",
@@ -870,7 +876,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Adjusting for inflation"
+    "### Adjusting for Inflation"
    ]
   },
   {
