:safety_vest: LET´S MERGE BBY

--- a/kevin.ipynb
+++ b/kevin.ipynb
@@ -4019,15 +4019,16 @@
    "source": [
     "# Histogram for plotly\n",
     "import plotly.express as px\n",
+    "\n",
     "fig = px.histogram(df_runtime, x=\"movie_runtime\")\n",
     "fig.update_layout(\n",
     "    autosize=False,\n",
     "    width=700,\n",
     "    height=600,\n",
-    "    title= \"Distribution of movie runtime\",\n",
-    "    xaxis_title= \"Length of movie runtime (minute)\",\n",
-    "    yaxis_title= \"Number of movies\"\n",
-    "    )\n",
+    "    title=\"Distribution of movie runtime\",\n",
+    "    xaxis_title=\"Length of movie runtime (minute)\",\n",
+    "    yaxis_title=\"Number of movies\",\n",
+    ")\n",
     "fig.write_html(\"./runtime.html\")"
    ]
   },
@@ -4249,18 +4250,21 @@
     "\n",
     "fig = go.Figure()\n",
     "fig.add_trace(go.Histogram(x=df_short[\"movie_box_office_revenue\"], name=\"Short movie\"))\n",
-    "fig.add_trace(go.Histogram(x=df_non_short[\"movie_box_office_revenue\"], name=\"Non-Short movie\"))\n",
+    "fig.add_trace(\n",
+    "    go.Histogram(x=df_non_short[\"movie_box_office_revenue\"], name=\"Non-Short movie\")\n",
+    ")\n",
     "fig.update_yaxes(type=\"log\")\n",
     "\n",
     "# The two histograms are drawn on top of another\n",
     "fig.update_layout(\n",
-    "    barmode='stack',\n",
+    "    barmode=\"stack\",\n",
     "    autosize=False,\n",
     "    width=700,\n",
     "    height=600,\n",
-    "    title= \"Distribution of revenue of short vs non-short movies (log scale)\",\n",
-    "    xaxis_title= \"Revenue\",\n",
-    "    yaxis_title= \"Number of movies (log)\")\n",
+    "    title=\"Distribution of revenue of short vs non-short movies (log scale)\",\n",
+    "    xaxis_title=\"Revenue\",\n",
+    "    yaxis_title=\"Number of movies (log)\",\n",
+    ")\n",
     "fig.write_html(\"./mixed.html\")"
    ]
   },
@@ -4878,14 +4882,21 @@
    "outputs": [],
    "source": [
     "# Plotly graphs for positive, negative and violent\n",
-    "fig = px.scatter(df_merge, x=\"positive\", y=\"movie_box_office_revenue\", trendline=\"ols\", trendline_color_override=\"orange\")\n",
+    "fig = px.scatter(\n",
+    "    df_merge,\n",
+    "    x=\"positive\",\n",
+    "    y=\"movie_box_office_revenue\",\n",
+    "    trendline=\"ols\",\n",
+    "    trendline_color_override=\"orange\",\n",
+    ")\n",
     "fig.update_layout(\n",
     "    autosize=False,\n",
     "    width=700,\n",
     "    height=300,\n",
-    "    title= \"Positive word proportion vs Revenue\",\n",
-    "    xaxis_title= \"Positive word proportion\",\n",
-    "    yaxis_title= \"Revenue\")\n",
+    "    title=\"Positive word proportion vs Revenue\",\n",
+    "    xaxis_title=\"Positive word proportion\",\n",
+    "    yaxis_title=\"Revenue\",\n",
+    ")\n",
     "fig.write_html(\"./positive_scatter.html\")"
    ]
   },
@@ -4896,14 +4907,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.scatter(df_merge, x=\"negative\", y=\"movie_box_office_revenue\", trendline=\"ols\", trendline_color_override=\"orange\")\n",
+    "fig = px.scatter(\n",
+    "    df_merge,\n",
+    "    x=\"negative\",\n",
+    "    y=\"movie_box_office_revenue\",\n",
+    "    trendline=\"ols\",\n",
+    "    trendline_color_override=\"orange\",\n",
+    ")\n",
     "fig.update_layout(\n",
     "    autosize=False,\n",
     "    width=700,\n",
     "    height=300,\n",
-    "    title= \"Negative word proportion vs Revenue\",\n",
-    "    xaxis_title= \"Negative word proportion\",\n",
-    "    yaxis_title= \"Revenue\")\n",
+    "    title=\"Negative word proportion vs Revenue\",\n",
+    "    xaxis_title=\"Negative word proportion\",\n",
+    "    yaxis_title=\"Revenue\",\n",
+    ")\n",
     "fig.write_html(\"./negative_scatter.html\")"
    ]
   },
@@ -4914,14 +4932,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.scatter(df_merge, x=\"violent\", y=\"movie_box_office_revenue\", trendline=\"ols\", trendline_color_override=\"orange\")\n",
+    "fig = px.scatter(\n",
+    "    df_merge,\n",
+    "    x=\"violent\",\n",
+    "    y=\"movie_box_office_revenue\",\n",
+    "    trendline=\"ols\",\n",
+    "    trendline_color_override=\"orange\",\n",
+    ")\n",
     "fig.update_layout(\n",
     "    autosize=False,\n",
     "    width=700,\n",
     "    height=300,\n",
-    "    title= \"Violent word proportion vs Revenue\",\n",
-    "    xaxis_title= \"Violent word proportion\",\n",
-    "    yaxis_title= \"Revenue\")\n",
+    "    title=\"Violent word proportion vs Revenue\",\n",
+    "    xaxis_title=\"Violent word proportion\",\n",
+    "    yaxis_title=\"Revenue\",\n",
+    ")\n",
     "fig.write_html(\"./violent_scatter.html\")"
    ]
   },
